When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 


21st September 2017
- USER: "Tile Size" label text turns red if the scan settings differ from the value in the pop-up box

20th September 2017
- USER: Move image resolution selection from the menu to the recipe panel.
- USER: Add checkboxes to acquisition view for leaving the laser on and cutting the last section.
- Save ScanImage acquisition settings to disk after the first section has been acquired. 
- Add class for interacting with Chameleon lasers from Coherent.

14th August 2017
- USER: The recipe fast z-settings are applied after each rapid preview scan.
- USER: Report estimated disk space and number of channels to main BakingTray GUI.
- USER: Acquisition will not start if there is insufficient disk space.
- USER: Checkboxes in Acquisition view for turning off laser after acq finishes and slicing the last section.
- USER: Improve the accuracy of the initial acquisition time estimate. 
- BUGFIX: Slicing events and section finishe are now logged to detailed section log file
- ScanImage pZ adjust no longer set by BakingTray
- "Keep resonant scanner on" always set to false in SIBT teardown method.

4th August 2017
- USER: Define imaging area by drawing a box. Zoom in and out. 
- USER: Channel offsets no longer subtracted in ScanImage.
- USER: Z-stack settings applied to ScanImage when the acquisition view opens. 
- Multiple bug fixes.


2nd August 2017 
- PMTs turn off automatically at the end of acquisition. 
- Various bug fixes including to on-line preview image display.
- Tweaks to laser control that should fix some latency issues and error messages.


25th July 2017